--- a/www/index.html
+++ b/www/index.html
@@ -31,11 +31,10 @@
     </head>
     <body>
         <div class="app">
-            <h1>hi every1 im new!!!!!!! holds up spork my name is katy but u can call me t3h PeNgU1N oF d00m!!!!!!!! lol…as u can see im very random!!!! thats why i came here, 2 meet random ppl like me _… im 13 years old (im mature 4 my age tho!!) i like 2 watch invader zim w/ my girlfreind (im bi if u dont like it deal w/it) its our favorite tv show!!! bcuz its SOOOO random!!!! shes random 2 of course but i want 2 meet more random ppl =) like they say the more the merrier!!!! lol…neways i hope 2 make alot of freinds here so give me lots of commentses!!!!
-DOOOOOMMMM!!!!!!!!!!!!!!!! <--- me bein random again _^ hehe…toodles!!!!!</h1>
+            <h1>WAHHHHHHHHHHHHHH!!!</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Downloading Facts...</p>
-                <p class="event received">ANIME WAS A MISTAKE!!!!</p>
+                <p class="event received">WONDERFUL!</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
