--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>WAHHHHHHHHHHHHHH!!!</h1>
+            <h1>WAH!</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Downloading Facts...</p>
                 <p class="event received">WONDERFUL!</p>
