--- a/www/index.html
+++ b/www/index.html
@@ -27,14 +27,14 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>My Little Test App</title>
+        <title>Mobile Apps Week 2 Phonegap and Github Testing</title>
     </head>
     <body>
         <div class="app">
-            <h1>WAH!</h1>
+            <h1>Shovel of Hope</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Downloading Facts...</p>
-                <p class="event received">WONDERFUL!</p>
+                <p class="event listening">Digging for code...</p>
+                <p class="event received">Steel Thy Shovel!</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
